--- a/src/app/pages/user-create.component/user-create.component.html
+++ b/src/app/pages/user-create.component/user-create.component.html
@@ -11,5 +11,5 @@
 </mat-dialog-content>
 <mat-dialog-actions>
     <button matButton="elevated" (click)="cancelCreate()">Annuler</button>
-    <button matButton="elevated" (click)="createTask()">Créer</button>
+    <button matButton="elevated" (click)="createUser()">Créer</button>
 </mat-dialog-actions>
