--- a/frontend/src/app/features/task/dialogs/task-opened/task-opened.html
+++ b/frontend/src/app/features/task/dialogs/task-opened/task-opened.html
@@ -105,5 +105,5 @@
 
 <mat-dialog-actions align="end">
   <button mat-stroked-button color="warn" (click)="cancelCreate()">Annuler</button>
-  <button mat-raised-button color="primary" >Enregistrer</button>
+  <button mat-raised-button color="primary" (click)="save()">Enregistrer</button>
 </mat-dialog-actions>
